# ChangeLog for app-arch/makeself
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/makeself/ChangeLog,v 1.13 2007/02/21 19:56:21 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -makeself-2.1.2.ebuild,
  -makeself-2.1.3.ebuild:
  QA: Removed unused versions.

*makeself-2.1.4 (22 Oct 2005)

  22 Oct 2005; Mike Frysinger <vapier@gentoo.org> +makeself-2.1.4.ebuild:
  Version bump.

  10 Aug 2005; Luis Medinas <metalgod@gentoo.org> makeself-2.1.3.ebuild:
  Marked Testing on AMD64. Closes bug #98310 .

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  makeself-2.1.2.ebuild:
  Masked makeself-2.1.2.ebuild stable for ppc

*makeself-2.1.3 (09 Aug 2004)

  09 Aug 2004; Mike Frysinger <vapier@gentoo.org> +makeself-2.1.3.ebuild:
  Version bump #59898 by Gerry.

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  makeself-2.1.2.ebuild:
  QA - IUSE fix

  04 Jun 2004; David Holm <dholm@gentoo.org> makeself-2.1.2.ebuild:
  Added to ~ppc.

  16 Apr 2004; Michael McCabe <randy@gentoo.org> makeself-2.1.2.ebuild:
  added s390 keywords

*makeself-2.1.2 (05 Sep 2003)

  05 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump to fix head -1.

*makeself-2.1.1 (27 Jun 2003)

  27 Jun 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.