@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/mscompress
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/mscompress/ChangeLog,v 1.14 2007/01/03 02:42:51 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/mscompress/ChangeLog,v 1.15 2007/03/30 14:04:05 beandog Exp $
+
+  30 Mar 2007; Steve Dibb <beandog@gentoo.org> mscompress-0.3.ebuild:
+  amd64 stable
 
   03 Jan 2007; Steve Dibb <beandog@gentoo.org> mscompress-0.3.ebuild:
   Add ~amd64, bug 148320
