@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/makeself
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/makeself/ChangeLog,v 1.13 2007/02/21 19:56:21 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/makeself/ChangeLog,v 1.14 2007/03/30 14:02:34 beandog Exp $
+
+  30 Mar 2007; Steve Dibb <beandog@gentoo.org> makeself-2.1.4.ebuild:
+  amd64 stable
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
